<resources>
    <string name="app_name">SchoolTimeTable</string>
    <string name="title_activity_my_main">MyMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">School TimeTable</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_class">Class</string>
    <string name="menu_Lectures">Lectures</string>
    <string name="menu_Department">Departments</string>
    <string name="menu_timetable">Time Table</string>
    <string name="menu_Setting">Settings</string>


</resources>