<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_web_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_class"
            android:icon="@drawable/baseline_class_24"
            android:title="@string/menu_class" />
        <item
            android:id="@+id/nav_Lecture"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_Lectures" />
        <item
            android:id="@+id/nav_Department"
            android:icon="@drawable/baseline_departure_board_24"
            android:title="@string/menu_Department" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/baseline_table_chart_24"
            android:title="@string/menu_timetable" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_Setting" />

    </group>

</menu>