<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.schooltimetable.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_class"
        android:name="com.example.schooltimetable.ui.Class.AllClassFragment"
        android:label="@string/menu_class"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_Lecture"
        android:name="com.example.schooltimetable.ui.Lecture.LectureFragment"
        android:label="@string/menu_Lectures"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_timetable"
        android:name="com.example.schooltimetable.ui.Timetable.TimetableFragment"
        android:label="@string/menu_timetable"
        tools:layout="@layout/timetablefragment" />



</navigation>